<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_product_title"
        android:layout_width="196dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="false"
        android:layout_marginStart="35dp"
        android:layout_marginTop="1dp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="7dp"
        android:text="@string/price"
        android:textColor="@android:color/tab_indicator_text"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn_dec"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="118dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/minus" />

    <TextView
        android:id="@+id/tv_product_qty"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/btn_dec"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="-66dp"
        android:clickable="false"
        android:editable="false"
        android:gravity="center_horizontal|center_vertical"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn_inc"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="11dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/plus" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/tv_product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/num"
        android:textColor="#000000"
        android:textSize="15sp" />

</RelativeLayout>